feat: add user endpoints to create and list users
